# To-Do-List-QML

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  taskmodel.cpp  taskmodel.h  windows_icon.rc
